<resources>
    <string name="app_name">Instach</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_add_post">Add post</string>
    <string name="webclient_id">496848978593-m1fhe4lhu7uskmiahg4ppnthq5jpfqf2.apps.googleusercontent.com</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in_with_github">Log in with GitHub</string>
    <string name="started_following_you">started following you</string>
    <string name="liked_your_post">liked your post</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_you_full_name">Enter you full name</string>
    <string name="already_have_an_account_sign_in">Already Have An Account? Sign In</string>
    <string name="Following_lbl">Following</string>
    <string name="Follow_lbl">Follow</string>
    <string name="edit_profile_lbl">Edit Profile</string>
    <string name="following_lbl">Following</string>
    <string name="follow_lbl">Follow</string>
    <string name="Like_lbl">Like</string>
    <string name="Liked_lbl">Liked</string>
    <string name="github_client_id"> 3db8cf3508642c15779d </string>
    <string name="github_client_secret">9cb43748a927fcf41dc5fc7bef23528aadbe6bf3</string>
    <string name="github_redirect_url">https://instach-c2484.firebaseapp.com/__/auth/handler</string>
    <string name="github_token">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</string>
</resources>